--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "visual",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": ".",
 	"dependencies": {
 		"react": "16.7.0-alpha.2",
 		"react-dom": "16.7.0-alpha.2",
