--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"homepage": ".",
 	"dependencies": {
+		"power-event": "^1.1.1",
 		"react": "16.7.0-alpha.2",
 		"react-dom": "16.7.0-alpha.2",
 		"react-scripts-ts": "3.1.0"
