--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"homepage": ".",
 	"dependencies": {
 		"power-event": "^1.1.1",
-		"react": "16.7.0-alpha.2",
-		"react-dom": "16.7.0-alpha.2",
+		"react": "16.8.1",
+		"react-dom": "16.8.1",
 		"react-scripts-ts": "3.1.0"
 	},
 	"scripts": {
